syntax = "proto3";

package city;

option go_package = "/;city";

service CityService {
  rpc GetAll (GetAllRequest) returns (Cities);
  rpc Find (FindRequest) returns (Cities);
  rpc Add (AddRequest) returns (UUID);
  rpc Remove (RemoveRequest) returns (UUID);
}

// Entities:
message City {
  string id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  string name_ru =4;
  string name_en =5;
}

message Cities {
  uint32 pages_count = 1;
  uint32 total_items = 2;
  uint32 per_page = 3;
  repeated City cities = 4;
}

message GetAllRequest {
  PaginationRequest pagination =1;
}

message FindRequest {
  PaginationRequest pagination =1;
  string city_id = 2;
  string name_ru = 3;
  string name_en = 4;
}

message AddRequest {
  string name_ru = 1;
  string name_en = 2;
}

message RemoveRequest {
  string city_id = 1;
}


// Base
message UUID {
  string value = 1;
}

message Empty {
}

message Exist {
  bool value = 1;
}

message PaginationRequest {
  uint32 page = 1;
  int32 limit = 2;
  uint32 offset = 3;
}
